<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_acceuil"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_enfant"
            android:icon="@drawable/children"
            android:title="@string/menu_listes_enfants" />
        <item
            android:id="@+id/nav_collaborateur"
            android:icon="@drawable/collaborator"
            android:title="@string/menu_listes_collaborateurs" />
        <item
            android:id="@+id/nav_presence"
            android:icon="@drawable/listepresence"
            android:title="@string/menu_presence" />

        <item
            android:id="@+id/nav_historique"
            android:icon="@drawable/historique"
            android:title="@string/menu_historique" />
        <item
            android:id="@+id/nav_deconnexion"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>

</menu>
