<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.15"
        android:visibility="visible"
        app:srcCompat="@drawable/logo_part_1"
        android:contentDescription="@string/logoback" />

    <Button
        android:id="@+id/salle1"
        android:text="@string/salle_1"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="140dp"
        android:layout_marginTop="150dp"

        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#019193"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_marginStart="140dp" />
    <Button
        android:id="@+id/salle2"
        android:text="@string/salle_2"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="140dp"
        android:layout_marginTop="250dp"

        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#019193"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_marginStart="140dp" />
    <Button
        android:id="@+id/salle3"
        android:text="@string/salle_3"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="140dp"
        android:layout_marginTop="350dp"

        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#019193"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_marginStart="140dp" />
    <Button
        android:id="@+id/salle4"
        android:text="@string/salle_4"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="140dp"
        android:layout_marginTop="450dp"

        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#019193"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_marginStart="140dp" />
</FrameLayout>