<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".SuiviQuotidienActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_suivi"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="@string/txt_motivation"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"></TextView>

        <RatingBar
            android:id="@+id/first_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="3"
            android:progressTint="@color/yellow"
            android:rating="0"
            android:stepSize="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="@string/txt_autonomie"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"></TextView>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="3"
            android:progressTint="@color/yellow"
            android:rating="0"
            android:stepSize="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="@string/txt_perseverance"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"></TextView>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="3"
            android:progressTint="@color/yellow"
            android:rating="0"
            android:stepSize="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="@string/txt_organisation"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"></TextView>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="3"
            android:progressTint="@color/yellow"
            android:rating="0"
            android:stepSize="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="@string/txt_comportement"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"></TextView>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="3"
            android:progressTint="@color/yellow"
            android:rating="0"
            android:stepSize="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:background="@color/colorPrimary" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:text="@string/txt_difficulte"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/edt_difficulte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="yanger15247"
                android:textColorHint="@color/white"
                android:textStyle="italic" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:text="@string/txt_force"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/edt_forces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="hdhdhddjjdjdjjdjdjdj"
                android:textColorHint="@color/white"
                android:textStyle="italic" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:text="@string/txt_a_faire"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/edt_a_faire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="dhhdhdddhd"
                android:textColorHint="@color/white"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button

                android:id="@+id/btn_soumettre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:background="@drawable/buttonstyle"
                android:gravity="center"
                android:text="@string/txt_soumettre"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>
</LinearLayout>